src/test/deca/syntax/invalid/resultats/test14_decl_inst-synt.res
./src/test/deca/syntax/invalid/test14_decl_inst.deca:17:5: no viable alternative at input 'x'
